[gd_scene load_steps=7 format=3 uid="uid://c5thomb4wodpp"]

[ext_resource type="Script" path="res://Scripts/UI/HealthBar.gd" id="1_6tgsr"]

[sub_resource type="Theme" id="Theme_gimh7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2xtx6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3mxu"]
bg_color = Color(0.121569, 0.709804, 0.458824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwrue"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.439216)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_loqkd"]
bg_color = Color(0.980392, 0.266667, 0.152941, 1)

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6tgsr")

[node name="HealthRemaining" type="ProgressBar" parent="."]
z_index = 1
layout_mode = 0
offset_right = 78.0
offset_bottom = 11.0
scale = Vector2(2.03151, 2.03151)
theme = SubResource("Theme_gimh7")
theme_override_styles/background = SubResource("StyleBoxEmpty_2xtx6")
theme_override_styles/fill = SubResource("StyleBoxFlat_c3mxu")
value = 60.0
show_percentage = false

[node name="DamageTaken" type="ProgressBar" parent="HealthRemaining"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fwrue")
theme_override_styles/fill = SubResource("StyleBoxFlat_loqkd")
value = 80.0
show_percentage = false

[node name="TimeToCatchUp" type="Timer" parent="HealthRemaining"]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="HealthRemaining/TimeToCatchUp" to="." method="_on_time_to_catch_up_timeout"]
